# parakeet-streaming-server

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  audio.py  main.py  session.py
scripts/: test_stream_client.py
tests/: test_audio.py  test_main_utils.py  test_session.py
